--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-target
-bin
-gen
-.DS_Store
-/com/
-reference
+ShiftIndicator/target
+ShiftIndicator/bin
+ShiftIndicator/gen
+ShiftIndicator/.DS_Store
+ShiftIndicator/com/
+ShiftIndicator/reference
 */.classpath
