first attempt at calculated shift indication

--- a/ShiftIndicator/project.properties
+++ b/ShiftIndicator/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../../../../cygwin/home/znelson1/projects/openxc-android/openxc
+android.library.reference.1=../../openxc-android/openxc
