--- a/ShiftIndicator/AndroidManifest.xml
+++ b/ShiftIndicator/AndroidManifest.xml
@@ -17,12 +17,18 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.shiftindicator.MainActivity"
+            android:launchMode="singleTask"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+            <intent-filter>
+                <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
+            </intent-filter>
+            <meta-data android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
+                    android:resource="@xml/device_filter" />
+        </activity>    
         <activity android:name=".SettingsActivity" />
         <service android:name="com.openxc.VehicleManager"/>
     </application>
