--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
+
 android {
-    compileSdkVersion 21
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.openxc.shiftindicator"
         minSdkVersion 14
-        targetSdkVersion 17
+        targetSdkVersion 22
     }
 
     buildTypes {
@@ -18,6 +19,6 @@ android {
 }
 
 dependencies {
-    compile project(':fTDriver')
-    compile 'com.openxcplatform:library:6.1.0+'
+    compile 'com.openxcplatform:library:6.1.6+'
+    compile 'com.github.openxc:FTDriver:v2.0'
 }
